# posh

./: .gitignore  .pylintrc  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg
src/posh/: __main__.py
src/posh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/posh/colours/: __init__.py  ansi_styles.py  colourizer.py
src/posh/commands/: __init__.py  argparser.py  command.py  regexp.py
src/posh/commands/file_system/: __init__.py  cat.py  cd.py  cp.py  ls.py  mkdir.py  mv.py  path_utils.py  pwd.py  rm.py  rmdir.py  touch.py
src/posh/commands/general/: __init__.py  alias.py  clear.py  config.py  exit.py  help.py  history.py  license.py  print_utils.py
src/posh/commands/processes/: __init__.py  kill.py  ps.py  run.py
src/posh/data/: config.json  history.txt
src/posh/interpreter/: __init__.py  commands.py  config.py  console.py  file_interpreter.py  history_manager.py  interpreter.py
