[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posh"
description = "A cross platform shell written in python."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11, <4"
dependencies = [
    "loguru>=0.7.0",
    "colorama>=0.4.6",
    "pyperclip>=1.8.2",
    "natsort>=8.3.1",
    "psutil>=5.9.5",
]
dynamic = ["version"]

[[project.authors]]
name = "Eris Fletcher"
email = "fletcher.eris@gmail.com"

[projecct.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "src/posh/LICENSE.txt"

[project.urls]
homepage = "https://github.com/ErisFletcher/posh"
"Issue Tracker" = "https://github.com/ErisFletcher/posh/issues"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.310",
    "pylint>=2.17.4",
    "black>=0.4.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

