[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posh"
description = "A cross platform shell written in python."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11, <4"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version", "dependencies", "optional-dependencies"]

[[project.authors]]
name = "Eris"
email = "theferretdetective@gmail.com"

[project.urls]
homepage = "https://github.com/FerretDetective/posh"
"Issue Tracker" = "https://github.com/FerretDetective/posh/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
posh = ["data/*"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "posh.__version__" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "dev_requirements.txt" }
