[metadata]
name = posh
version = attr: posh.__version__
description = A cross platform shell written in python.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
author = Eris Fletcher
author_email = fletcher.eris@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
python_requires = >=3.11, <4
project_urls =
    Homepage = https://github.com/ErisFletcher/posh
    Issue Tracker = https://github.com/ErisFletcher/posh/issues


[options]
include_project_data = True
install_requires = file: requirements.txt
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src
